2003-12-12  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.h: 
	* src/cairo-features.h.in: 
	* src/Makefile.am (libcairo_ps_sources): Add conditionals for
	ps_surface functions, etc.

	* configure.in: Get rid of AC_PATH_XTRA. Instead, find X
	includes/libraries only via pkg-config xrender.
	Switch option from --without-x to --disable-xlib
	Add option --disable-ps

	* cairo.pc.in (Libs): Add -lz only if ps_surface backend is compiled.

	* src/cairo.h (__external_linkage): Add missing definitions from
	slim_import.h.

2003-12-11  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Rename surface->ic_image to
	surface->pixman_image.

	* src/cairo_image_surface.c
	(_cairo_image_surface_create_for_pixman_image):
	(_cairo_image_surface_create_with_masks):
	(_create_pixman_format):
	(cairo_image_surface_create):
	(cairo_image_surface_create_for_data):
	(_cairo_image_abstract_surface_destroy):
	(_cairo_image_surface_set_matrix):
	(_cairo_image_surface_set_filter):
	(_cairo_image_surface_set_repeat):
	(_pixman_operator):
	(_cairo_image_surface_fill_rectangles):
	(_cairo_image_surface_composite_trapezoids): Rename functions and
	indentifiers with ic_ in the name that were missed by the recent
	renaming. Fix indentation problems left by the recent renaming.

	* Shift everything over from libic/libpixregion/slim to
	libpixman. Many thanks to Dave Beckett
	<dave.beckett@bristol.ac.uk> for all of the heavy lifting with
	this renaming effort.

	* src/cairoint.h (slim_hidden_proto1): Directly fold in slim stuff
	rather than depending on it from an external package.

	* src/cairo_ps_surface.c (_cairo_ps_surface_copy_page): 
	* src/cairo_image_surface.c: Switch from libic to libpixman.

	* src/cairo.h: Include pixman.h not ic.h.
	(__external_linkage): Directly fold in slim stuff rather than
	depending on it from an external package.

	* configure.in (PKG_CHECK_MODULES): 
	* cairo.pc.in (Requires): Look for libpixman instead of libic and
	slim.
